Actualización del programa
->Vista intermedia par ir a solicitud, resolución y declaración de gatos.
->Actualización de procedimientos almacenados
-> Organización de código según CRUD

Falta
->Vista de solicitud terminada con posibilidad de modificar
->Linea de tiempo para la vista intermedia del proceso de solicitud
-> Unir las demás vistas con la vista intermedia

--- a/SimRend1.1/SimRend/SimRend/Views/Shared/_Layout.cshtml
+++ b/SimRend1.1/SimRend/SimRend/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
             <nav id="colorNav">
                 <ul>
                     <li class="green">
-                        <a class="fas fa-search-dollar" asp-area="" asp-controller="Solicitud" asp-action="Index"></a>
+                        <a class="fas fa-search-dollar" asp-area="" asp-controller="Principal" asp-action="TablaSolicitudes"></a>
                         <!--a class="nav-link" asp-area="" asp-controller="Solicitud" asp-action="Index">Busqueda<span class="sr-only">(current)</span></a!-->
                         <!--ul>
                             <li><a href="http://tutorialzine.com/2012/10/css3-dropdown-menu/">Back to the tutorial</a></li>
