--- a/SimRend1.1/SimRend/SimRend/Views/Solicitud/Category.cshtml
+++ b/SimRend1.1/SimRend/SimRend/Views/Solicitud/Category.cshtml
@@ -45,7 +45,7 @@
         </div>
     </div>
 
-    @using (Html.BeginForm("Person", "Solicitud", FormMethod.Get, new { @style = "border:none" }))
+    @using (Html.BeginForm("IrPersona", "Solicitud", FormMethod.Get, new { @style = "border:none" }))
     {
         <div class =" container" style="padding-top: calc(0.5em + 6px); text-align:right;">
             <div class="row">
