--- a/SimRend1.1/SimRend/SimRend/Views/Solicitud/Resume.cshtml
+++ b/SimRend1.1/SimRend/SimRend/Views/Solicitud/Resume.cshtml
@@ -51,11 +51,11 @@
     <div class="wrapper wrapperBotonFormulario">
         @using (Html.BeginForm("GeneratePDF", "Solicitud", FormMethod.Get, new { @style = "border:none" }))
         {
-            <button type="submit" class="buttonSecundary">Generar PDF</button>
+            <button type="submit" class="buttonSecundary">VerPDF</button>
         }
     </div>
     <div class="wrapper wrapperBotonFormulario toggle">
-        @using (Html.BeginForm("VolverIndex", "Solicitud", FormMethod.Get, new { @style = "border:none" }))
+        @using (Html.BeginForm("FinalizarSolicitud", "Solicitud", FormMethod.Get, new { @style = "border:none" }))
         {
             <button type="submit" class="buttonPrimary">Finalizar</button>
         }
