--- a/Aplicacion web/SimRend/SimRend/Views/Resolucion/ActualizarResolucion.cshtml
+++ b/Aplicacion web/SimRend/SimRend/Views/Resolucion/ActualizarResolucion.cshtml
@@ -202,7 +202,7 @@
             var numResolucion = $("#numResolucion").parsley();
             var anioResolucion = $("#anioResolucion").parsley();
 
-            console.log(rutaDoc, numResolucion, anioResolucion);
+            //console.log(rutaDoc, numResolucion, anioResolucion);
             if ((rutaDoc.isValid() || nombreResolucion=='Resolucion.pdf') && numResolucion.isValid() && anioResolucion.isValid())
             {
                 e.preventDefault();
