--- a/Aplicacion web/SimRend/SimRend/Views/Resolucion/CrearResolucion.cshtml
+++ b/Aplicacion web/SimRend/SimRend/Views/Resolucion/CrearResolucion.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Agregar resolución";
+    ViewData["Title"] = "Agregar documento";
 }
 
 <div class="br-pagetitle row">
