--- a/SimRend1.1/SimRend/SimRend/Views/DeclaracionGastos/DeclaracionGastos.cshtml
+++ b/SimRend1.1/SimRend/SimRend/Views/DeclaracionGastos/DeclaracionGastos.cshtml
@@ -18,7 +18,7 @@
             {
                 @foreach (var item in ViewData["Personas"] as List<Persona>)
                 {
-                    @using (Html.BeginForm("RendicionParticipante", "Rendicion", FormMethod.Post, new { @style = "border:none" }))
+                    @using (Html.BeginForm("RendicionParticipante", "DeclaracionGastos", FormMethod.Post, new { @style = "border:none" }))
                     {
                         
                             <div class="" for="">
