--- a/Aplicacion web/SimRend/SimRend/wwwroot/css/bracket.css
+++ b/Aplicacion web/SimRend/SimRend/wwwroot/css/bracket.css
@@ -7999,11 +7999,12 @@ textarea.parsley-error:active {
 /* ############### 3.7 Form Layoyuts ############### */
 /* ------------------------------------------------- */
 .form-layout-footer .btn, .form-layout-footer .sp-container button, .sp-container .form-layout-footer button {
-  text-transform: uppercase;
-  font-size: 11px;
-  letter-spacing: 1px;
-  font-weight: 500;
-  padding: 12px 20px; }
+    //text-transform: uppercase;
+    font-size: 0.875rem;
+    //letter-spacing: 1px;
+    //font-weight: 500;
+    padding: 12px 20px;
+}
 
 /***** FORM LAYOUT 1 *****/
 .form-layout-1 {
